--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   font-size: 18px;
   color: #161616;
   padding: 0;
-  margin: 0;
+  margin: 10px;
 }
 .header {
   position: fixed;
@@ -22,25 +22,29 @@ body {
 }
 .navigationpane {
   position: absolute;
-  height: 91.22px;
-  width: 450px;
-  padding-top: 45px;
-  background:  rgba(201, 185, 209, 0.28;
-  right: 0;
-  top: 0;
+  top:100px;
+  background:rgba (201, 185, 209, 0.28;
+  right: 450px;
+  bottom: 0;
 }
+
 .aside {
-  top: 90px;
-  right: 20px;
+  width: 200px;
+  top: 0;
+  right: 0;
   background-color: rgba(240, 248, 255, 0.13);
+  position: absolute;
+  overflow: hidden;
 }
 .main {
   background-color: rgba(240, 248, 255, 0.13);
   padding-top: 113px;
-  position-relative
+  position: relative;
 }
+
 section {
   margin-right: 300px;
+  margin-top: 200px;
 }
 
 /* эксперименты с position */
